tests/type-errors/arith_div_tez_rat.arl
archetype arith_div_tez_rat

action main () {
  effect {
    var v = 1tz / (1 div 2)
  }
}
